@@ -1,3 +1,7 @@
+2022-10-08
+
+  * Add optional 'directory' argument
+
 2022-10-07
 
   * Use proper versioning
